# opengl-renderer

./: CMakeLists.txt  README.md
include/glew/: glew.h
include/glfw/: glfw3.h  glfw3native.h
include/glm/: glm.hpp  packing.hpp
include/glm/detail/: setup.hpp
include/glm/ext/: matrix_clip_space.hpp  matrix_projection.hpp  matrix_transform.hpp
include/glm/gtc/: matrix_transform.hpp
include/imgui/: imgui_impl_glfw.h  imgui_impl_opengl3.h  imgui_impl_opengl3_loader.h  imstb_textedit.h
include/stb_image/: stb_image.h
lib/imgui/src/: imgui.cpp  imgui_demo.cpp  imgui_impl_glfw.cpp  imgui_impl_opengl3.cpp  imgui_widgets.cpp
src/: main.cpp
src/camera/: Camera.h
src/excpetions/: GLEWException.h  GLFWException.h
src/renderer/: CubeRenderer.cpp  CubeRenderer.h  LightRenderer.cpp  LightRenderer.h
src/scene/: Scene.cpp  Scene.h
src/scene/camera/: Camera.h
src/scene/entity/: Cube.cpp  Cube.h  Light.cpp  Light.h
src/shader/: ShaderManager.cpp  ShaderManager.h  main.fs  main.vs  shader_m.h
src/texture/: Texture.cpp  Texture.h
src/user_input/: UserInput.cpp  UserInput.h
src/utility/: root_directory.h
src/view/: GLFWWrapper.cpp  GLFWWrapper.h  Gui.cpp  Gui.h  ImGuiWrapper.cpp  ImGuiWrapper.h  OpenGLWrapper.cpp  OpenGLWrapper.h
